# SupaMCP

./: .gitignore  CMakeLists.txt  Doxyfile  INTEGRATION_GUIDE.md  LICENSE  README.md  README_STREAMABLE_HTTP.md  gateway_config.json  remove_BOM.ps1  tw-remove.ps1  websocket_client_refactoring.md  websocket_server_fix.md  websocket_server_refactoring.md
benchmark/: benchmark_cli.c  mcp_benchmark.c  mcp_benchmark.h
client/: main.c
client/include/: mcp_client.h
client/src/: main.c  mcp_client.c  mcp_client_api.c  mcp_client_batch.c  mcp_client_core.c  mcp_client_hash_table.c  mcp_client_internal.h  mcp_client_request.c
docs/: README.md  cache_implementation.md  http_client.md  http_protocol.md  http_protocol_optimization.md  json_utils.md  kmcp.md  mqtt_error_handling_improvements.md  mqtt_security.md  mqtt_session_persistence.md  mqtt_transport.md  streamable_http_transport.md  template_guide.md  template_optimization.md  transport_factory.md
docs/kmcp/: README.md  api_doc_template.md  api_reference.md  architecture.md  component_interaction.md  configuration_guide.md  profile_management_guide.md  quick_start.md  registry_guide.md  test_plan.md  tool_sdk_guide.md  troubleshooting_guide.md  usage_examples.md
examples/: CMakeLists.txt  README_TESTING.md  advanced_rate_limiter_demo.c  basic_http_server.c  batch_request_example.c  echo_client.c  echo_server.c  factory_streamable_server.c  graceful_shutdown_example.c  http_server.c  http_server.conf.template  http_static_res.c  http_static_res.h  http_streamable_client.c  http_streamable_server.c  kmcp_comprehensive_example.c  kmcp_example.c  kmcp_profile_example.c  kmcp_ssl_example.c  kmcp_tool_example.c  memory_pool_stats_demo.c  mqtt_session_persistence_example.c  object_cache_test.c  performance_comparison.c  performance_metrics_test.c  pool_client_example.c  realistic_performance_test.c  reconnect_client_example.c  rwlock_demo.c  secure_template_server.c  template_benchmark.c  template_benchmark_advanced.c  template_client_test.c  template_debug.c  template_demo.c  template_examples.c  template_rest_api.c  template_server.c  test_client_limits.c  test_http_parser_usage.c  (+13 more)
examples/http_static/: index.html
include/: gateway.h  gateway_config_manager.h  gateway_pool.h  gateway_routing.h  gateway_socket_utils.h  lws_config.h  mcp_advanced_rate_limiter.h  mcp_arena.h  mcp_atom.h  mcp_auth.h  mcp_buffer_pool.h  mcp_cache.h  mcp_cache_aligned.h  mcp_client.h  mcp_connection_pool.h  mcp_framing.h  mcp_gateway.h  mcp_gateway_config_manager.h  mcp_gateway_pool.h  mcp_gateway_routing.h  mcp_hashtable.h  mcp_http_client_transport.h  mcp_http_session_manager.h  mcp_http_sse_common.h  mcp_http_streamable_client_transport.h  mcp_http_streamable_transport.h  mcp_http_transport.h  mcp_json.h  mcp_json_message.h  mcp_json_rpc.h  mcp_json_utils.h  mcp_list.h  mcp_log.h  mcp_log_config.h  mcp_memory_constants.h  mcp_memory_pool.h  mcp_memory_tracker.h  mcp_metrics.h  mcp_mqtt_client_transport.h  mcp_mqtt_transport.h  (+33 more)
include/kmcp/: kmcp.h  (+14 more)
kmcp/: CMakeLists.txt
python/: CMakeLists.txt  README.md  README_streamable.md  kmcp_langchain.py  requirements.txt  requirements_streamable.txt  setup.py  test_custom_headers.py  test_streamable_http.py
server/: main.c
src/: main.c  mcp_arena.c  mcp_auth.c  mcp_buffer_pool.c  mcp_cache.c  mcp_cache_optimized.c  mcp_connection_pool.c  mcp_connection_pool_socket.c  mcp_connection_pool_sync.c  mcp_connection_pool_utils.c  mcp_hashtable.c  mcp_json.c  mcp_json_hashtable.c  mcp_json_message.c  mcp_json_parser.c  mcp_json_rpc.c  mcp_json_stringifier.c  mcp_log.c  mcp_plugin.c  mcp_profiler.c  mcp_rate_limiter.c  mcp_server.c  mcp_server_dispatch.c  mcp_server_handlers.c  mcp_server_internal.h  mcp_server_response.c  mcp_server_task.c  mcp_stdio_transport.c  mcp_tcp_acceptor.c  mcp_tcp_client_handler.c  mcp_tcp_client_receiver.c  mcp_tcp_client_socket_utils.c  mcp_tcp_client_transport.c  mcp_tcp_socket_utils.c  mcp_tcp_transport.c  mcp_tcp_transport_internal.h  mcp_thread_pool.c  mcp_transport.c  mcp_transport_internal.h  mcp_types.c
tests/: CMakeLists.txt  http_protocol_test.py  mock_transport.c  mock_transport.h  start_http_server.py  test_json_schema_cache.c  test_lru_only.c  test_mcp_advanced_rate_limiter.c  test_mcp_arena.c  test_mcp_buffer_pool.c  test_mcp_cache.c  test_mcp_cache_lru.c  test_mcp_client_async.c  test_mcp_client_hashtable.c  test_mcp_hashtable.c  test_mcp_json.c  test_mcp_json_message.c  test_mcp_log.c  test_mcp_plugin.c  test_mcp_rate_limiter.c  test_mcp_server_handlers.c  test_mcp_stdio_transport.c  test_mcp_tcp_client_transport.c  test_mcp_tcp_transport.c  test_mcp_template.c  test_mcp_template_security.c  test_mcp_thread_pool.c  test_mcp_transport_factory.c  test_mcp_types.c  test_memory_pool.c  test_memory_pool_runner.c  test_mqtt_error_handling.c  test_runner.c  test_windows_text_mode.c
tests/kmcp/: CMakeLists.txt  README.md  generate_test_report.ps1  kmcp_client_test.c  kmcp_config_parser_test.c  kmcp_error_test.c  kmcp_event_test.c  kmcp_http_client_test.c  kmcp_memory_test.c  kmcp_process_test.c  kmcp_profile_manager_test.c  kmcp_registry_test.c  kmcp_server_manager_test.c  kmcp_test_framework_test.c  kmcp_test_runner.c  kmcp_tool_access_test.c  kmcp_version_test.c  run_all_tests.ps1  run_integration_tests.ps1  run_performance_tests.ps1  run_system_tests.ps1  run_tests.ps1  run_unit_tests.ps1  test_config.json  test_registry_server.c  test_report_template.md  test_tool.c
tests/kmcp/integration/: CMakeLists.txt  README.md  kmcp_client_profile_manager_integration_test.c  kmcp_integration_test_runner.c  kmcp_server_manager_stub.h  run_tests.c
tests/kmcp/performance/: CMakeLists.txt  README.md  kmcp_performance_test_runner.c  kmcp_server_manager_stub.c  kmcp_tool_call_throughput_test.c
tests/kmcp/system/: CMakeLists.txt  README.md  kmcp_profile_management_test.c  kmcp_system_test_runner.c  run_tests.c
tests/kmcp/unit/: CMakeLists.txt  README.md  kmcp_profile_manager_test.c  kmcp_unit_test_runner.c  run_tests.c
tests/unity/: unity.c  unity.h  unity_internals.h
(+260 files in other folders)
